url-loader/css-sprits/font

--- a/webpack4.1/index.html
+++ b/webpack4.1/index.html
@@ -10,11 +10,13 @@
 
 <body>
     <div id='app'></div>
+    <span class='fa fa-folder' style='font-szie: 20px;'>asdasdasd</span>
     <div class='img'>
         <div class='img1'></div>
         <div class='img2'></div>
         <div class='img3'></div>
     </div>
+
     <script src='./dist/app.js' /></script>
 </body>
 </html>
