update webpack dev server

--- a/webpack5.1/index.html
+++ b/webpack5.1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id='app'></div>
-    <span class='fa fa-folder' style='font-szie: 20px;'>asdasdasd</span>
+    <span class='fa fa-folder' style='font-szie: 20px;'>4545</span>
     <div class='img'>
         <div class='img1'></div>
         <div class='img2'></div>
