--- a/webpack_init/public/index.html
+++ b/webpack_init/public/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script src="vendors/react.production.min.js" type="text/javascript"></script>
+  <script src="vendors/react-dom.production.min.js" type="text/javascript"></script>
+  <script src="vendors/prop-types.js" type="text/javascript"></script>
 </head>
 <body>
-  this is my test html
   <div id='app'></div>
 </body>
 </html>
