--- a/webpack4.1/index.html
+++ b/webpack4.1/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href='./dist/app.min.css'></Link>
+    <link rel="stylesheet" href='./css/1.css'></Link>
 </head>
 
 <body>
